Adding in New Models.

--- a/NFL2024Regression.ipynb
+++ b/NFL2024Regression.ipynb
@@ -9,60 +9,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5\n",
-      "Classification Report:\n",
+      "Accuracy: 0.6\n",
+      "Classification Report LR:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.00      0.00      0.00         1\n",
-      "           1       0.67      0.67      0.67         3\n",
+      "           1       0.75      0.75      0.75         4\n",
       "\n",
-      "    accuracy                           0.50         4\n",
-      "   macro avg       0.33      0.33      0.33         4\n",
-      "weighted avg       0.50      0.50      0.50         4\n",
+      "    accuracy                           0.60         5\n",
+      "   macro avg       0.38      0.38      0.38         5\n",
+      "weighted avg       0.60      0.60      0.60         5\n",
       "\n",
-      "Training Results:\n",
-      "              Home Team             Away Team  Actual  Predicted\n",
-      "0    Kansas City Chiefs      Baltimore Ravens       1          1\n",
-      "1   Philadelphia Eagles     Green Bay Packers       1          1\n",
-      "5    Cincinnati Bengals  New England Patriots       0          1\n",
-      "14        Detroit Lions      Los Angeles Rams       1          0\n",
-      "Predictions for Next Week's Games:\n",
-      "                Home Team             Away Team  Predicted Home Win\n",
-      "0          Miami Dolphins         Buffalo Bills                   1\n",
-      "1          Dallas Cowboys    New Orleans Saints                   1\n",
-      "2           Detroit Lions  Tampa Bay Buccaneers                   0\n",
-      "3       Green Bay Packers    Indianapolis Colts                   0\n",
-      "4        Tennessee Titans         New York Jets                   0\n",
-      "5       Minnesota Vikings   San Francisco 49ers                   1\n",
-      "6    New England Patriots      Seattle Seahawks                   0\n",
-      "7   Washington Commanders       New York Giants                   1\n",
-      "8       Carolina Panthers  Los Angeles Chargers                   0\n",
-      "9    Jacksonville Jaguars      Cleveland Browns                   0\n",
-      "10       Baltimore Ravens     Las Vegas Raiders                   1\n",
-      "11      Arizona Cardinals      Los Angeles Rams                   0\n",
-      "12         Denver Broncos   Pittsburgh Steelers                   1\n",
-      "13     Kansas City Chiefs    Cincinnati Bengals                   1\n",
-      "14         Houston Texans         Chicago Bears                   1\n",
-      "15    Philadelphia Eagles       Atlanta Falcons                   1\n"
+      "Accuracy: 0.4\n",
+      "Classification Report RF:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         1\n",
+      "           1       0.67      0.50      0.57         4\n",
+      "\n",
+      "    accuracy                           0.40         5\n",
+      "   macro avg       0.33      0.25      0.29         5\n",
+      "weighted avg       0.53      0.40      0.46         5\n",
+      "\n",
+      "Accuracy: 0.8\n",
+      "Classification Report GB:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         1\n",
+      "           1       0.80      1.00      0.89         4\n",
+      "\n",
+      "    accuracy                           0.80         5\n",
+      "   macro avg       0.40      0.50      0.44         5\n",
+      "weighted avg       0.64      0.80      0.71         5\n",
+      "\n",
+      "Predictions for Next Week's Games:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/28/lsql7v0120v8k73zmyv8t27r0000gn/T/ipykernel_14518/712784551.py:26: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfTrain['Home Win'] = dfTrain['Home Total Score'] > dfTrain['Away Total Score']\n"
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
@@ -70,6 +69,8 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
@@ -90,49 +91,57 @@
     "    return temp\n",
     "\n",
     "# Split into past and present\n",
-    "dfTrain = df.head(16)\n",
-    "dfPredict = df.tail(len(df)-16)\n",
+    "dfTrain = df.head(16).copy()\n",
+    "dfPredict = df.tail(len(df)-16).copy()\n",
     "\n",
     "# Step 1: Infer the Win/Loss outcome for the home team (1 = win, 0 = loss)\n",
-    "dfTrain['Home Win'] = dfTrain['Home Total Score'] > dfTrain['Away Total Score']\n",
+    "dfTrain.loc[:, 'Home Win'] = dfTrain['Home Total Score'] > dfTrain['Away Total Score']\n",
     "# Step 2: Select relevant features (quarterly scores, home/away teams, etc.)\n",
     "features = ['Home ML', 'Away ML', 'Home Team ID', 'Away Team ID']\n",
     "\n",
     "dfTrain = dfTrain[features + ['Home Win']].dropna()\n",
-    "#label_encoder = LabelEncoder()\n",
-    "#df['Home Team'] = label_encoder.fit_transform(df['Home Team'])\n",
-    "#df['Away Team'] = label_encoder.fit_transform(df['Away Team'])\n",
     "\n",
     "# Step 3: Define features (X) and target (y)\n",
     "X = dfTrain.drop(columns=['Home Win'])\n",
     "y = dfTrain['Home Win'].astype(int)\n",
     "# Step 4: Split data into training and testing sets (80% train, 20% test)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=42)\n",
     "\n",
-    "# Step 5: Initialize and train a Logistic Regression model (linear regression for classification)\n",
+    "# Step 5: Initialize and train types of models\n",
     "model = LogisticRegression()\n",
     "model.fit(X_train, y_train)\n",
+    "modelRF = RandomForestClassifier(n_estimators=100, random_state = 42)\n",
+    "modelRF.fit(X_train, y_train)\n",
+    "modelGB = GradientBoostingClassifier(n_estimators=100, random_state = 42)\n",
+    "modelGB.fit(X_train, y_train)\n",
     "\n",
     "# Step 6: Make predictions on the test set\n",
     "y_pred = model.predict(X_test)\n",
+    "y_predRF = modelRF.predict(X_test)\n",
+    "y_predGB = modelGB.predict(X_test)\n",
     "\n",
     "# Step 7: Evaluate the model\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "report = classification_report(y_test, y_pred)\n",
     "\n",
+    "accuracyRF = accuracy_score(y_test, y_predRF)\n",
+    "reportRF = classification_report(y_test, y_predRF)\n",
+    "\n",
+    "accuracyGB = accuracy_score(y_test, y_predGB)\n",
+    "reportGB = classification_report(y_test, y_predGB)\n",
+    "\n",
     "# Model Eval Output\n",
     "print(f\"Accuracy: {accuracy}\")\n",
-    "print(\"Classification Report:\")\n",
+    "print(\"Classification Report LR:\")\n",
     "print(report)\n",
     "\n",
-    "results = pd.DataFrame({\n",
-    "    'Home Team': getTeamName(X_test['Home Team ID']),\n",
-    "    'Away Team': getTeamName(X_test['Away Team ID']),\n",
-    "    'Actual': y_test,\n",
-    "    'Predicted': y_pred\n",
-    "})\n",
-    "print(\"Training Results:\")\n",
-    "print(results)\n",
+    "print(f\"Accuracy: {accuracyRF}\")\n",
+    "print(\"Classification Report RF:\")\n",
+    "print(reportRF)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracyGB}\")\n",
+    "print(\"Classification Report GB:\")\n",
+    "print(reportGB)\n",
     "\n",
     "#Predict Next Week Games\n",
     "dfPredict = dfPredict[features].dropna()\n",
@@ -140,16 +149,20 @@
     "X_next_games = dfPredict[features]\n",
     "\n",
     "predictions = model.predict(X_next_games)\n",
+    "predictionsRF = modelRF.predict(X_next_games)\n",
+    "predictionsGB = modelGB.predict(X_next_games)\n",
     "\n",
     "#Prediction Output\n",
     "prediction_results = pd.DataFrame({\n",
     "    'Home Team': getTeamName(dfPredict['Home Team ID']),\n",
     "    'Away Team': getTeamName(dfPredict['Away Team ID']),\n",
-    "    'Predicted Home Win': predictions\n",
+    "    'Predicted Home Win LR': predictions,\n",
+    "    'Predicted Home Win RF': predictionsRF,\n",
+    "    'Predicted Home Win GB': predictionsGB\n",
     "})\n",
     "\n",
     "print(\"Predictions for Next Week's Games:\")\n",
-    "print(prediction_results)"
+    "prediction_results.to_csv('2024Week2Predictions.csv')"
    ]
   }
  ],
